--- a/11 - Custom Video Player/style.css
+++ b/11 - Custom Video Player/style.css
@@ -9,26 +9,27 @@ html {
 body {
   margin: 0;
   padding: 0;
-  display:flex;
-  background:#7A419B;
-  min-height:100vh;
-  background: linear-gradient(135deg, #7c1599 0%,#921099 48%,#7e4ae8 100%);
-  background-size:cover;
+  display: flex;
+  background: #7A419B;
+  min-height: 100vh;
+  background: linear-gradient(to bottom, #8e0e00, #1f1c18);
+  background-size: cover;
   align-items: center;
   justify-content: center;
 }
 
 .player {
-  max-width:750px;
-  border:5px solid rgba(0,0,0,0.2);
-  box-shadow:0 0 20px rgba(0,0,0,0.2);
+  max-width: 750px;
+  box-shadow: 0 0 18px rgba(0, 0, 0, 0.46);
   position: relative;
+  /*Font size for player controls*/
   font-size: 0;
   overflow: hidden;
 }
 
-/* This css is only applied when fullscreen is active. */
-.player:fullscreen {
+
+/*CSS applied only when fullscreen is active*/
+.player__video:fullscreen {
   max-width: none;
   width: 100%;
 }
@@ -42,20 +43,20 @@ body {
   width: 100%;
 }
 
-.player__button {
-  background:none;
-  border:0;
-  line-height:1;
-  color:white;
+.player_button {
+  background: none;
+  border: 0;
+  line-height: 1;
+  color: white;
   text-align: center;
-  outline:0;
+  outline: 0;
   padding: 0;
-  cursor:pointer;
-  max-width:50px;
+  cursor: pointer;
+  max-width: 50px;
 }
 
 .player__button:focus {
-  border-color: #ffc600;
+  border-color: white;
 }
 
 .player__slider {
@@ -63,10 +64,10 @@ body {
   height:30px;
 }
 
-.player__controls {
-  display:flex;
+.player_controls {
+  display: flex;
   position: absolute;
-  bottom:0;
+  bottom: 0;
   width: 100%;
   transform: translateY(100%) translateY(-5px);
   transition:all .3s;
@@ -99,7 +100,7 @@ body {
 
 .progress__filled {
   width:50%;
-  background:#ffc600;
+  background: white;
   flex:0;
   flex-basis:50%;
 }
@@ -128,14 +129,14 @@ input[type=range]::-webkit-slider-thumb {
   height: 15px;
   width: 15px;
   border-radius: 50px;
-  background: #ffc600;
+  background: white;
   cursor: pointer;
   -webkit-appearance: none;
   margin-top: -3.5px;
   box-shadow:0 0 2px rgba(0,0,0,0.2);
 }
 input[type=range]:focus::-webkit-slider-runnable-track {
-  background: #bada55;
+  background: rgb(78, 70, 230);
 }
 input[type=range]::-moz-range-track {
   width: 100%;
@@ -151,6 +152,6 @@ input[type=range]::-moz-range-thumb {
   height: 15px;
   width: 15px;
   border-radius: 50px;
-  background: #ffc600;
+  background: white;
   cursor: pointer;
 }
