--- a/11 - Custom Video Player/style.css
+++ b/11 - Custom Video Player/style.css
@@ -9,27 +9,26 @@ html {
 body {
   margin: 0;
   padding: 0;
-  display: flex;
-  background: #7A419B;
-  min-height: 100vh;
+  display:flex;
+  background: black;
+  min-height:100vh;
   background: linear-gradient(to bottom, #8e0e00, #1f1c18);
-  background-size: cover;
+  background-size:cover;
   align-items: center;
   justify-content: center;
 }
 
 .player {
   max-width: 750px;
-  box-shadow: 0 0 18px rgba(0, 0, 0, 0.46);
+  border: 2px solid rgba(0,0,0,0.2);
+  box-shadow:0 0 18px rgba(0,0,0,0.2);
   position: relative;
-  /*Font size for player controls*/
   font-size: 0;
   overflow: hidden;
 }
 
-
-/*CSS applied only when fullscreen is active*/
-.player__video:fullscreen {
+/* This css is only applied when fullscreen is active. */
+.player:fullscreen {
   max-width: none;
   width: 100%;
 }
@@ -43,7 +42,7 @@ body {
   width: 100%;
 }
 
-.player_button {
+.player__button {
   background: none;
   border: 0;
   line-height: 1;
@@ -60,19 +59,19 @@ body {
 }
 
 .player__slider {
-  width:10px;
-  height:30px;
+  width: 10px;
+  height: 30px;
 }
 
-.player_controls {
+.player__controls {
   display: flex;
   position: absolute;
   bottom: 0;
   width: 100%;
   transform: translateY(100%) translateY(-5px);
-  transition:all .3s;
-  flex-wrap:wrap;
-  background:rgba(0,0,0,0.1);
+  transition: all .3s;
+  flex-wrap: wrap;
+  background: rgba(0,0,0,0.1);
 }
 
 .player:hover .player__controls {
@@ -80,29 +79,29 @@ body {
 }
 
 .player:hover .progress {
-  height:15px;
+  height: 15px;
 }
 
 .player__controls > * {
-  flex:1;
+  flex: 1;
 }
 
 .progress {
-  flex:10;
+  flex: 10;
   position: relative;
-  display:flex;
-  flex-basis:100%;
-  height:5px;
-  transition:height 0.3s;
-  background:rgba(0,0,0,0.5);
-  cursor:ew-resize;
+  display: flex;
+  flex-basis: 100%;
+  height: 5px;
+  transition: height 0.3s;
+  background: rgba(0,0,0,0.5);
+  cursor: ew-resize;
 }
 
 .progress__filled {
-  width:50%;
+  width: 50%;
   background: white;
-  flex:0;
-  flex-basis:50%;
+  flex: 0;
+  flex-basis: 50%;
 }
 
 /* unholy css to style input type="range" */
@@ -129,21 +128,21 @@ input[type=range]::-webkit-slider-thumb {
   height: 15px;
   width: 15px;
   border-radius: 50px;
-  background: white;
+  background: #8e0e00;
   cursor: pointer;
   -webkit-appearance: none;
   margin-top: -3.5px;
   box-shadow:0 0 2px rgba(0,0,0,0.2);
 }
 input[type=range]:focus::-webkit-slider-runnable-track {
-  background: rgb(78, 70, 230);
+  background: white;
 }
 input[type=range]::-moz-range-track {
   width: 100%;
   height: 8.4px;
   cursor: pointer;
   box-shadow: 1px 1px 1px rgba(0, 0, 0, 0), 0 0 1px rgba(13, 13, 13, 0);
-  background: #ffffff;
+  background: gray;
   border-radius: 1.3px;
   border: 0.2px solid rgba(1, 1, 1, 0);
 }
@@ -152,6 +151,6 @@ input[type=range]::-moz-range-thumb {
   height: 15px;
   width: 15px;
   border-radius: 50px;
-  background: white;
+  background: gray;
   cursor: pointer;
 }
